--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0",
         "livewire/livewire": "^2.0",
+        "maatwebsite/excel": "^3.1",
+        "spatie/laravel-permission": "^3.17",
         "tightenco/ziggy": "^0.9.4"
     },
     "require-dev": {
